# kyc-aml-intelligence-agent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  run_kyc.py
agents/: enrichment_agent.py  risk_assessment_agent.py
core/: audit_trail.py  models.py  pipeline.py
data/: sample_entities.json
docs/: pm-guide-ai-in-kyc.md  user-guide.md
