[project]
name = "kyc-aml-intelligence-agent"
version = "1.0.0"
description = "Multi-agent KYC/AML entity screening — sanctions, PEP, adverse media, corporate registry, AI risk scoring, HITL review"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "streamlit>=1.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[project.urls]
Repository = "https://github.com/basavarajshepur-lab/kyc-aml-intelligence-agent"
